yacc.output
State 27 conflicts: 1 shift/reduce


Grammar

    0 $accept: statementlist $end

    1 statementlist: statementlist statement
    2              | statement

    3 block: LCB statementlist RCB

    4 conditionE: E relop E

    5 relop: GT
    6      | LT
    7      | GE
    8      | LE
    9      | EQ
   10      | UE

   11 compareop: LP conditionE RP

   12 @1: /* empty */

   13 ifstatement: IF compareop statement ELSE @1 statement
   14            | IF compareop statement

   15 @2: /* empty */

   16 whilestatement: DO @2 statement WHILE compareop

   17 @3: /* empty */

   18 whilestatement: WHILE @3 compareop statement

   19 assignstatement: ID ASSIGN E SC

   20 statement: assignstatement
   21          | ifstatement
   22          | whilestatement
   23          | block

   24 E: E ADD E
   25  | E SUB E
   26  | E MUL E
   27  | E DIV E
   28  | NUMBER
   29  | ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 19 29
NUMBER (259) 28
LP (260) 11
RP (261) 11
LCB (262) 3
RCB (263) 3
ADD (264) 24
SUB (265) 25
DIV (266) 27
MUL (267) 26
GT (268) 5
LT (269) 6
GE (270) 7
LE (271) 8
EQ (272) 9
UE (273) 10
DO (274) 16
IF (275) 13 14
ELSE (276) 13
WHILE (277) 16 18
ASSIGN (278) 19
SC (279) 19


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
statementlist (26)
    on left: 1 2, on right: 0 1 3
block (27)
    on left: 3, on right: 23
conditionE (28)
    on left: 4, on right: 11
relop (29)
    on left: 5 6 7 8 9 10, on right: 4
compareop (30)
    on left: 11, on right: 13 14 16 18
ifstatement (31)
    on left: 13 14, on right: 21
@1 (32)
    on left: 12, on right: 13
whilestatement (33)
    on left: 16 18, on right: 22
@2 (34)
    on left: 15, on right: 16
@3 (35)
    on left: 17, on right: 18
assignstatement (36)
    on left: 19, on right: 20
statement (37)
    on left: 20 21 22 23, on right: 1 2 13 14 16 18
E (38)
    on left: 24 25 26 27 28 29, on right: 4 19 24 25 26 27


state 0

    0 $accept: . statementlist $end

    ID     shift, and go to state 1
    LCB    shift, and go to state 2
    DO     shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    statementlist    go to state 6
    block            go to state 7
    ifstatement      go to state 8
    whilestatement   go to state 9
    assignstatement  go to state 10
    statement        go to state 11


state 1

   19 assignstatement: ID . ASSIGN E SC

    ASSIGN  shift, and go to state 12


state 2

    3 block: LCB . statementlist RCB

    ID     shift, and go to state 1
    LCB    shift, and go to state 2
    DO     shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    statementlist    go to state 13
    block            go to state 7
    ifstatement      go to state 8
    whilestatement   go to state 9
    assignstatement  go to state 10
    statement        go to state 11


state 3

   16 whilestatement: DO . @2 statement WHILE compareop

    $default  reduce using rule 15 (@2)

    @2  go to state 14


state 4

   13 ifstatement: IF . compareop statement ELSE @1 statement
   14            | IF . compareop statement

    LP  shift, and go to state 15

    compareop  go to state 16


state 5

   18 whilestatement: WHILE . @3 compareop statement

    $default  reduce using rule 17 (@3)

    @3  go to state 17


state 6

    0 $accept: statementlist . $end
    1 statementlist: statementlist . statement

    $end   shift, and go to state 18
    ID     shift, and go to state 1
    LCB    shift, and go to state 2
    DO     shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    block            go to state 7
    ifstatement      go to state 8
    whilestatement   go to state 9
    assignstatement  go to state 10
    statement        go to state 19


state 7

   23 statement: block .

    $default  reduce using rule 23 (statement)


state 8

   21 statement: ifstatement .

    $default  reduce using rule 21 (statement)


state 9

   22 statement: whilestatement .

    $default  reduce using rule 22 (statement)


state 10

   20 statement: assignstatement .

    $default  reduce using rule 20 (statement)


state 11

    2 statementlist: statement .

    $default  reduce using rule 2 (statementlist)


state 12

   19 assignstatement: ID ASSIGN . E SC

    ID      shift, and go to state 20
    NUMBER  shift, and go to state 21

    E  go to state 22


state 13

    1 statementlist: statementlist . statement
    3 block: LCB statementlist . RCB

    ID     shift, and go to state 1
    LCB    shift, and go to state 2
    RCB    shift, and go to state 23
    DO     shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    block            go to state 7
    ifstatement      go to state 8
    whilestatement   go to state 9
    assignstatement  go to state 10
    statement        go to state 19


state 14

   16 whilestatement: DO @2 . statement WHILE compareop

    ID     shift, and go to state 1
    LCB    shift, and go to state 2
    DO     shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    block            go to state 7
    ifstatement      go to state 8
    whilestatement   go to state 9
    assignstatement  go to state 10
    statement        go to state 24


state 15

   11 compareop: LP . conditionE RP

    ID      shift, and go to state 20
    NUMBER  shift, and go to state 21

    conditionE  go to state 25
    E           go to state 26


state 16

   13 ifstatement: IF compareop . statement ELSE @1 statement
   14            | IF compareop . statement

    ID     shift, and go to state 1
    LCB    shift, and go to state 2
    DO     shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    block            go to state 7
    ifstatement      go to state 8
    whilestatement   go to state 9
    assignstatement  go to state 10
    statement        go to state 27


state 17

   18 whilestatement: WHILE @3 . compareop statement

    LP  shift, and go to state 15

    compareop  go to state 28


state 18

    0 $accept: statementlist $end .

    $default  accept


state 19

    1 statementlist: statementlist statement .

    $default  reduce using rule 1 (statementlist)


state 20

   29 E: ID .

    $default  reduce using rule 29 (E)


state 21

   28 E: NUMBER .

    $default  reduce using rule 28 (E)


state 22

   19 assignstatement: ID ASSIGN E . SC
   24 E: E . ADD E
   25  | E . SUB E
   26  | E . MUL E
   27  | E . DIV E

    ADD  shift, and go to state 29
    SUB  shift, and go to state 30
    DIV  shift, and go to state 31
    MUL  shift, and go to state 32
    SC   shift, and go to state 33


state 23

    3 block: LCB statementlist RCB .

    $default  reduce using rule 3 (block)


state 24

   16 whilestatement: DO @2 statement . WHILE compareop

    WHILE  shift, and go to state 34


state 25

   11 compareop: LP conditionE . RP

    RP  shift, and go to state 35


state 26

    4 conditionE: E . relop E
   24 E: E . ADD E
   25  | E . SUB E
   26  | E . MUL E
   27  | E . DIV E

    ADD  shift, and go to state 29
    SUB  shift, and go to state 30
    DIV  shift, and go to state 31
    MUL  shift, and go to state 32
    GT   shift, and go to state 36
    LT   shift, and go to state 37
    GE   shift, and go to state 38
    LE   shift, and go to state 39
    EQ   shift, and go to state 40
    UE   shift, and go to state 41

    relop  go to state 42


state 27

   13 ifstatement: IF compareop statement . ELSE @1 statement
   14            | IF compareop statement .

    ELSE  shift, and go to state 43

    ELSE      [reduce using rule 14 (ifstatement)]
    $default  reduce using rule 14 (ifstatement)


state 28

   18 whilestatement: WHILE @3 compareop . statement

    ID     shift, and go to state 1
    LCB    shift, and go to state 2
    DO     shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    block            go to state 7
    ifstatement      go to state 8
    whilestatement   go to state 9
    assignstatement  go to state 10
    statement        go to state 44


state 29

   24 E: E ADD . E

    ID      shift, and go to state 20
    NUMBER  shift, and go to state 21

    E  go to state 45


state 30

   25 E: E SUB . E

    ID      shift, and go to state 20
    NUMBER  shift, and go to state 21

    E  go to state 46


state 31

   27 E: E DIV . E

    ID      shift, and go to state 20
    NUMBER  shift, and go to state 21

    E  go to state 47


state 32

   26 E: E MUL . E

    ID      shift, and go to state 20
    NUMBER  shift, and go to state 21

    E  go to state 48


state 33

   19 assignstatement: ID ASSIGN E SC .

    $default  reduce using rule 19 (assignstatement)


state 34

   16 whilestatement: DO @2 statement WHILE . compareop

    LP  shift, and go to state 15

    compareop  go to state 49


state 35

   11 compareop: LP conditionE RP .

    $default  reduce using rule 11 (compareop)


state 36

    5 relop: GT .

    $default  reduce using rule 5 (relop)


state 37

    6 relop: LT .

    $default  reduce using rule 6 (relop)


state 38

    7 relop: GE .

    $default  reduce using rule 7 (relop)


state 39

    8 relop: LE .

    $default  reduce using rule 8 (relop)


state 40

    9 relop: EQ .

    $default  reduce using rule 9 (relop)


state 41

   10 relop: UE .

    $default  reduce using rule 10 (relop)


state 42

    4 conditionE: E relop . E

    ID      shift, and go to state 20
    NUMBER  shift, and go to state 21

    E  go to state 50


state 43

   13 ifstatement: IF compareop statement ELSE . @1 statement

    $default  reduce using rule 12 (@1)

    @1  go to state 51


state 44

   18 whilestatement: WHILE @3 compareop statement .

    $default  reduce using rule 18 (whilestatement)


state 45

   24 E: E . ADD E
   24  | E ADD E .
   25  | E . SUB E
   26  | E . MUL E
   27  | E . DIV E

    SUB  shift, and go to state 30
    DIV  shift, and go to state 31
    MUL  shift, and go to state 32

    $default  reduce using rule 24 (E)


state 46

   24 E: E . ADD E
   25  | E . SUB E
   25  | E SUB E .
   26  | E . MUL E
   27  | E . DIV E

    DIV  shift, and go to state 31
    MUL  shift, and go to state 32

    $default  reduce using rule 25 (E)


state 47

   24 E: E . ADD E
   25  | E . SUB E
   26  | E . MUL E
   27  | E . DIV E
   27  | E DIV E .

    MUL  shift, and go to state 32

    $default  reduce using rule 27 (E)


state 48

   24 E: E . ADD E
   25  | E . SUB E
   26  | E . MUL E
   26  | E MUL E .
   27  | E . DIV E

    $default  reduce using rule 26 (E)


state 49

   16 whilestatement: DO @2 statement WHILE compareop .

    $default  reduce using rule 16 (whilestatement)


state 50

    4 conditionE: E relop E .
   24 E: E . ADD E
   25  | E . SUB E
   26  | E . MUL E
   27  | E . DIV E

    ADD  shift, and go to state 29
    SUB  shift, and go to state 30
    DIV  shift, and go to state 31
    MUL  shift, and go to state 32

    $default  reduce using rule 4 (conditionE)


state 51

   13 ifstatement: IF compareop statement ELSE @1 . statement

    ID     shift, and go to state 1
    LCB    shift, and go to state 2
    DO     shift, and go to state 3
    IF     shift, and go to state 4
    WHILE  shift, and go to state 5

    block            go to state 7
    ifstatement      go to state 8
    whilestatement   go to state 9
    assignstatement  go to state 10
    statement        go to state 52


state 52

   13 ifstatement: IF compareop statement ELSE @1 statement .

    $default  reduce using rule 13 (ifstatement)
